# botv2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  WEEK1_REPORT.md  docker-compose.yml  pyproject.toml  run_ingestion.py  run_optimization.py  run_optimization_fast.py  run_research.py
config/: live_params.json
scripts/: health_monitor.sh  nautilus_runner.py  setup.ps1  setup.sh
src/: __init__.py  main.py
src/analysis/: __init__.py  cli.py  engine.py  models.py  visualizer.py
src/execution/: __init__.py  config_loader.py
src/execution/strategies/: __init__.py  ema_cross.py
src/models/: __init__.py
src/monitoring/: __init__.py  health.py  telegram.py
src/utils/: __init__.py
tests/: conftest.py
tests/analysis/: __init__.py  test_engine.py
